Encode CRS URL.